@@ -1,3 +1,10 @@
+2004-02-25  Bastien Nocera  <hadess@hadess.net>
+
+	* actions/Makefile.am:
+	* actions/acme-volume-gstreamer.[ch]:
+	* actions/acme-volume.c: (acme_volume_class_init),
+	(acme_volume_new): add GStreamer mixer support
+
 2004-02-24  Mariano Suárez-Alvarez <mariano@gnome.org>
 
 	* gnome-settings-accessibility-keyboard.c
